[project]
name = "web-mcp-repo"
version = "0.1.0"
description = "A collection of MCP Servers for Web"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.3",
]

[tool.uv.sources]
crawl4ai-mcp-py = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "rust-just>=1.45.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
